fix(astro-pedidos): Arreglo del header y el layout al eliminar el "overflow: hidden", sobresalía hacía la derecha porque estaba usando en el header "100vw" en lugar de "100%" como medida de tamaño.

--- a/frontend/cafeteria-app/astro-pedidos/src/components/Header.module.css
+++ b/frontend/cafeteria-app/astro-pedidos/src/components/Header.module.css
@@ -15,7 +15,7 @@
   Estilos del header global
 */
 .header {
-  width: 100vw;
+  width: 100%;
   max-width: 100vw;
   box-sizing: border-box;
   background: var(--white);
@@ -28,7 +28,6 @@
   top: 0;
   z-index: 100;
   min-width: 0;
-  overflow-x: clip;
 }
 
 .header > * {
